--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -33,5 +34,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    /*jw player*/
+    implementation 'com.longtailvideo.jwplayer:jwplayer-core:3.4.3+'
+    implementation 'com.longtailvideo.jwplayer:jwplayer-common:3.4.3+'
+    implementation 'com.longtailvideo.jwplayer:jwplayer-ima:3.4.3+'
+    implementation 'com.longtailvideo.jwplayer:jwplayer-chromecast:3.4.3+'
+
 
 }
