--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'https://mvn.jwplayer.com/content/repositories/amazon/'
+        }
+        maven {
+            url 'https://mvn.jwplayer.com/content/repositories/releases/'
+        }
         google()
         jcenter()
     }
