--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
-    ext.jw_version = "3.4.3+"//3.12.0
+    /*TO DO CHANGE VERSION with SAME VERSION*/
+    ext.jw_version = "3.15.0"//3.12.0 // 3.4.3+ // 3.14.0
     repositories {
         google()
         jcenter()
@@ -17,9 +18,6 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url 'https://mvn.jwplayer.com/content/repositories/amazon/'
-        }
         maven {
             url 'https://mvn.jwplayer.com/content/repositories/releases/'
         }
